# hsort

./: .travis.yml  CMakeLists.txt  README.md  hsort.hpp
benchmark/: comparison_with_stdsort.cpp  gbench.cpp  gbench_full.cpp  gbench_random.cpp  profiling_wrapper.hpp
detail/: apply_order.hpp  iterator_wrapper.hpp
profiles/random/: profile_boost_flat.prof  profile_boost_ifs.prof  profile_boost_iss.prof  profile_boost_pdq.prof  profile_boost_spin.prof  profile_sort_heavy.prof  profile_stdsort.prof
test/: test.cpp
